--- a/Index.html
+++ b/Index.html
@@ -17,6 +17,8 @@
         <li>Trem</li>
         <li>Bicicleta</li>
         <li><img src="Imagembase.png"></li>
+        <li><a href="https://github.com/geohugo">GitHub</a></li>
+        <li><a href="mailto: hugo.paula@escola.pr.gov.br">Email</a></li>  <li><a href="tel:+5543991829102">Telefone</a></li>    
     </ul>
 </body>
 </html>
